// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReviewTemplate component matches error snapshot 1`] = `
<DocumentFragment>
  <div
    aria-labelledby="error-summary-title"
    class="nhsuk-error-summary"
    role="alert"
    tabindex="-1"
  >
    <h2
      class="nhsuk-error-summary__title"
      data-testid="error-summary"
      id="error-summary-title"
    />
    <ul
      class="nhsuk-list nhsuk-error-summary__list"
    >
      <li>
        <a
          href="#exampleError"
        >
          Example error
        </a>
      </li>
    </ul>
  </div>
  <h1
    class="review__heading"
    data-testid="preview-message__heading"
  >
    <span
      class="nhsuk-caption-l"
      data-testid="preview-message__heading-caption"
    >
      NHS app message template
    </span>
    Example NHS APP template
  </h1>
  <details
    class="nhsuk-details"
  >
    <summary
      class="nhsuk-details__summary"
      data-testid="preview-message-details__heading"
    >
      <span
        class="nhsuk-details__summary-text"
      >
        Details heading
      </span>
    </summary>
    <div
      class="nhsuk-details__text"
      data-testid="preview-message-details__text"
    >
      <p>
        Details text
      </p>
    </div>
  </details>
  Preview
  <form
    action=""
  >
    <input
      name="form-id"
      readonly=""
      type="hidden"
      value="preview-form"
    />
    <div
      class="nhsuk-form-group"
    >
      <fieldset
        class="nhsuk-fieldset"
      >
        <legend
          class="nhsuk-fieldset__legend nhsuk-fieldset__legend--m"
          data-testid="preview-example-form__legend"
        >
          Example heading
        </legend>
        <div
          class="nhsuk-form-group"
        >
          <div
            class="nhsuk-radios"
            id="preview-example"
          >
            <div
              class="nhsuk-radios__item"
            >
              <input
                aria-labelledby="preview-example-option-1--label"
                class="nhsuk-radios__input"
                data-testid="option-1-radio"
                id="preview-example-option-1"
                name="preview-example"
                type="radio"
                value="option-1"
              />
              <label
                class="nhsuk-label nhsuk-radios__label"
                for="preview-example-option-1"
                id="preview-example-option-1--label"
              >
                option 1
              </label>
            </div>
            <div
              class="nhsuk-radios__item"
            >
              <input
                aria-labelledby="preview-example-option-2--label"
                class="nhsuk-radios__input"
                data-testid="option-2-radio"
                id="preview-example-option-2"
                name="preview-example"
                type="radio"
                value="option-2"
              />
              <label
                class="nhsuk-label nhsuk-radios__label"
                for="preview-example-option-2"
                id="preview-example-option-2--label"
              >
                option 2
              </label>
            </div>
          </div>
        </div>
      </fieldset>
    </div>
    <button
      aria-disabled="false"
      class="nhsuk-button"
      data-testid="submit-button"
      id="preview-form-submit-button"
      type="submit"
    >
      Continue
    </button>
  </form>
</DocumentFragment>
`;

exports[`ReviewTemplate component matches snapshot 1`] = `
<DocumentFragment>
  <h1
    class="review__heading"
    data-testid="preview-message__heading"
  >
    <span
      class="nhsuk-caption-l"
      data-testid="preview-message__heading-caption"
    >
      NHS app message template
    </span>
    Example NHS APP template
  </h1>
  <details
    class="nhsuk-details"
  >
    <summary
      class="nhsuk-details__summary"
      data-testid="preview-message-details__heading"
    >
      <span
        class="nhsuk-details__summary-text"
      >
        Details heading
      </span>
    </summary>
    <div
      class="nhsuk-details__text"
      data-testid="preview-message-details__text"
    >
      <p>
        Details text
      </p>
    </div>
  </details>
  Preview
  <form
    action=""
  >
    <input
      name="form-id"
      readonly=""
      type="hidden"
      value="preview-form"
    />
    <div
      class="nhsuk-form-group"
    >
      <fieldset
        class="nhsuk-fieldset"
      >
        <legend
          class="nhsuk-fieldset__legend nhsuk-fieldset__legend--m"
          data-testid="preview-example-form__legend"
        >
          Example heading
        </legend>
        <div
          class="nhsuk-form-group"
        >
          <div
            class="nhsuk-radios"
            id="preview-example"
          >
            <div
              class="nhsuk-radios__item"
            >
              <input
                aria-labelledby="preview-example-option-1--label"
                class="nhsuk-radios__input"
                data-testid="option-1-radio"
                id="preview-example-option-1"
                name="preview-example"
                type="radio"
                value="option-1"
              />
              <label
                class="nhsuk-label nhsuk-radios__label"
                for="preview-example-option-1"
                id="preview-example-option-1--label"
              >
                option 1
              </label>
            </div>
            <div
              class="nhsuk-radios__item"
            >
              <input
                aria-labelledby="preview-example-option-2--label"
                class="nhsuk-radios__input"
                data-testid="option-2-radio"
                id="preview-example-option-2"
                name="preview-example"
                type="radio"
                value="option-2"
              />
              <label
                class="nhsuk-label nhsuk-radios__label"
                for="preview-example-option-2"
                id="preview-example-option-2--label"
              >
                option 2
              </label>
            </div>
          </div>
        </div>
      </fieldset>
    </div>
    <button
      aria-disabled="false"
      class="nhsuk-button"
      data-testid="submit-button"
      id="preview-form-submit-button"
      type="submit"
    >
      Continue
    </button>
  </form>
</DocumentFragment>
`;
